<resources>
    <string name="app_name">Pathé</string>
    <string name="iv_company_logo" translatable="false">Pathé</string>
    <string name="action_settings">Instellingen</string>

    <string name="sp_upcoming">Verwacht</string>
    <string name="sp_popular">Populair</string>
    <string name="sp_rated">Hoogste rating</string>

    <string name="sv_search_bar">Zoek film</string>
    <string name="tv_page_title">Mijn Pathé</string>
    <string name="tv_page_title_lists">Mijn lijsten</string>
    <string name="bt_delete_list">Verwijder lijst</string>
    <string name="bt_delete_item">Verwijder item</string>
    <string name="bt_back">Terug</string>
    <string name="tv_list_name">Mijn lijsten</string>
    <string name="tv_rating">Rating</string>
    <string name="tv_cast">Cast</string>
    <string name="tv_trailer">Trailer</string>
    <string name="image_description">Afbeelding</string>
    <string name="bt_add_list">Toevoegen aan lijst</string>
    <string name="tv_movie_title" translatable="false">Titel Film</string>
    <string name="bt_show_review">Toon reviews</string>
    <string name="bt_hide_review">Verberg reviews</string>
    <string name="tv_rating_title">Beoordeling</string>
    <string name="sw_night_mode">Nacht</string>
    <string name="bt_list_navigate">Mijn lijsten</string>
    <string name="tv_loading">Laden...</string>


</resources>
