<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="149dp"
        android:background="@color/patheYellowPrimary"
        android:baselineAligned="false"
        android:theme="@style/AppTheme.AppBarOverlay">

        <ImageView
            android:id="@+id/iv_main_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/iv_company_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/pathe_logo" />

        <TextView
            android:id="@+id/tv_page_title"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="8dp"
            android:text="@string/tv_page_title"
            android:textColor="@color/blackTitle"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/iv_main_image"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/bt_add_to_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/reviewBackgroundColor"
            android:padding="8dp"
            android:text="@string/bt_add_list"
            android:textColor="@color/blackTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            style="@android:style/Widget.DeviceDefault.ScrollView"
            android:id="@+id/sv_detail_scrollview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="149dp"
            android:scrollbarStyle="insideInset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:id="@+id/tv_movie_detail_title"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginEnd="40dp"
                        android:layout_marginRight="40dp"
                        android:textColor="@color/blackTitle"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_movie_detail_rating_text"
                        android:layout_width="30dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="0"
                        android:textColor="@color/blackTitle"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tv_movie_detail_title"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/ll_movie_detail_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/tv_movie_detail_rating_text"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/iv_movie_detail_cover"
                        android:layout_width="100dp"
                        android:layout_height="150dp"
                        android:contentDescription="@string/image_description" />

                    <TextView
                        android:id="@+id/tv_movie_detail_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/colorBlack"
                        app:layout_constraintTop_toTopOf="@+id/ll_movie_detail_wrapper" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_movie_detail_cast_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/tv_cast"
                    android:textColor="@color/blackTitle"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_movie_detail_cast_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/colorBlack" />

                <VideoView
                    android:id="@+id/vv_movie_detail_trailer_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/bt_show_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/reviewBackgroundColor"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:padding="8dp"
                    android:text="@string/bt_show_review"
                    android:textColor="@color/blackTitle" />

                <LinearLayout
                    android:id="@+id/ll_review_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@color/reviewBackgroundColor"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/tv_review_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="Reviews"
                        android:textColor="@color/reviewColor"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_reviews"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>